--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,5 @@
-idf_component_register(SRCS "main.c" "coding_style.c"
-                    INCLUDE_DIRS ".")
+# See the build system documentation in IDF programming guide
+# for more information about component CMakeLists.txt files.
+
+idf_component_register(SRCS main.c bme680_sensor.c
+						INCLUDE_DIRS ".")
