--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,6 @@
 # See the build system documentation in IDF programming guide
 # for more information about component CMakeLists.txt files.
 
-idf_component_register(SRCS "main.c" "rgb_led.c"
-						INCLUDE_DIRS ".")
+idf_component_register(
+	SRCS "main.c" "rgb_led.c" "wifi_app.c"
+	INCLUDE_DIRS ".")
